--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,12 @@ input, select, textarea {
 		margin-bottom: 2em;
 	}
 
+/* collapse test */
+
+.collapse.show {
+  visibility: visible;
+}
+
 /* Container */
 
 	.container {
